# cpp_cpu_emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backend.cpp  backend.h  common.cpp  common.h  cpu.cpp  cpu.h  frontend.cpp  frontend.h  instructions.cpp  instructions.h  loader.cpp  loader.h  main.cpp  memory_subsystem.cpp  memory_subsystem.h  program.txt  program2.asm  todo.txt  utils.cpp  utils.h
include/: common.h  cpu.h  frontend.h  instructions.h  loader.h  memory_subsystem.h
src/: backend.cpp  common.cpp  cpu.cpp  frontend.cpp  instructions.cpp  loader.cpp  main.cpp  memory_subsystem.cpp  utils.cpp
